crates/escalier_parser/src/snapshots/escalier_parser__tests__operations.snap
---
source: crates/escalier_parser/src/lib.rs
expression: "parse(\"1 + 2 - 3;\")"
---
Ok(
    Program {
        body: [
            ExprStmt(
                Expr {
                    loc: SourceLocation {
                        start: Position {
                            line: 0,
                            column: 0,
                        },
                        end: Position {
                            line: 0,
                            column: 9,
                        },
                    },
                    span: 0..9,
                    kind: BinaryExpr(
                        BinaryExpr {
                            op: Sub,
                            left: Expr {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 0,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 5,
                                    },
                                },
                                span: 0..5,
                                kind: BinaryExpr(
                                    BinaryExpr {
                                        op: Add,
                                        left: Expr {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 0,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 1,
                                                },
                                            },
                                            span: 0..1,
                                            kind: Lit(
                                                Num(
                                                    Num {
                                                        loc: SourceLocation {
                                                            start: Position {
                                                                line: 0,
                                                                column: 0,
                                                            },
                                                            end: Position {
                                                                line: 0,
                                                                column: 1,
                                                            },
                                                        },
                                                        span: 0..1,
                                                        value: "1",
                                                    },
                                                ),
                                            ),
                                            inferred_type: None,
                                        },
                                        right: Expr {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 4,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 5,
                                                },
                                            },
                                            span: 4..5,
                                            kind: Lit(
                                                Num(
                                                    Num {
                                                        loc: SourceLocation {
                                                            start: Position {
                                                                line: 0,
                                                                column: 4,
                                                            },
                                                            end: Position {
                                                                line: 0,
                                                                column: 5,
                                                            },
                                                        },
                                                        span: 4..5,
                                                        value: "2",
                                                    },
                                                ),
                                            ),
                                            inferred_type: None,
                                        },
                                    },
                                ),
                                inferred_type: None,
                            },
                            right: Expr {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 8,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 9,
                                    },
                                },
                                span: 8..9,
                                kind: Lit(
                                    Num(
                                        Num {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 8,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 9,
                                                },
                                            },
                                            span: 8..9,
                                            value: "3",
                                        },
                                    ),
                                ),
                                inferred_type: None,
                            },
                        },
                    ),
                    inferred_type: None,
                },
            ),
        ],
    },
)
