crates/escalier_parser/src/snapshots/escalier_parser__tests__parse_unary_operators.snap
---
source: crates/escalier_parser/src/lib.rs
expression: "parse(\"--a - +b\")"
---
Expr {
    kind: Binary {
        left: Expr {
            kind: Unary {
                op: Minus,
                right: Expr {
                    kind: Unary {
                        op: Minus,
                        right: Expr {
                            kind: Identifier(
                                "a",
                            ),
                            loc: SourceLocation {
                                start: Position {
                                    line: 1,
                                    column: 3,
                                },
                                end: Position {
                                    line: 1,
                                    column: 4,
                                },
                            },
                        },
                    },
                    loc: SourceLocation {
                        start: Position {
                            line: 1,
                            column: 2,
                        },
                        end: Position {
                            line: 1,
                            column: 4,
                        },
                    },
                },
            },
            loc: SourceLocation {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 4,
                },
            },
        },
        op: Minus,
        right: Expr {
            kind: Unary {
                op: Plus,
                right: Expr {
                    kind: Identifier(
                        "b",
                    ),
                    loc: SourceLocation {
                        start: Position {
                            line: 1,
                            column: 8,
                        },
                        end: Position {
                            line: 1,
                            column: 9,
                        },
                    },
                },
            },
            loc: SourceLocation {
                start: Position {
                    line: 1,
                    column: 7,
                },
                end: Position {
                    line: 1,
                    column: 9,
                },
            },
        },
    },
    loc: SourceLocation {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 9,
        },
    },
}
